Position fixed - always visible top page

--- a/sun_holiday_planner.css
+++ b/sun_holiday_planner.css
@@ -13,7 +13,7 @@ html, body {
 
 
                 #panel {
-                  position: absolute;
+                  position: fixed;
                   top: 5px;
                   left: 50%;
                   margin-left: -180px;
